--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "dependencies": {
     "express": "^4.18.3"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "pruebaexpres",
+  "description": "prueba de servidor",
+  "version": "1.0.0",
+  "main": "server.js",
+  "author": "",
+  "license": "ISC"
 }
